@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-26T01:48:26Z",
-  "count_outdated" : 153,
-  "uniques_outdated" : 109,
+  "timestamp" : "2022-10-26T08:23:35Z",
+  "count_outdated" : 156,
+  "uniques_outdated" : 111,
   "count" : 157,
   "uniques" : 112,
   "clones" : [
-    {
-      "timestamp": "2022-10-12T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 1,
