@@ -1,3 +1,11 @@
+2022-10-26T08:23:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3327364147 # 557
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 109 153 / 112 157
+* notice: next accum: outdated-unq outdated-all / unq all: 111 156 / 112 157
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-12] / []
+
 2022-10-26T01:48:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3325586763 # 556
 * notice: last 14d: unq all: 3 4
